--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Xcode
-#
+.DS_Store
 build/
 *.pbxuser
 !default.pbxuser
@@ -9,18 +9,12 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
 xcuserdata
-*.xccheckout
+profile
 *.moved-aside
 DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-#
-#Pods/
+.idea/
+# Pods - for those of you who use CocoaPods
+Pods
