Integrate with crashlytics.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ DerivedData
 .idea/
 # Pods - for those of you who use CocoaPods
 Pods
+Crashlytics.framework
+
+Depoza/Fabric.framework
+
+Fabric.framework
