--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ DerivedData
 Pods/
 Crashlytics.framework
 Fabric.framework
+
+Pods/KVNProgress/KVNProgress/Classes/KVNProgress.h
+Pods/KVNProgress/KVNProgress/Classes/KVNProgress.m
